; ModuleID = '/home/carl/AnghaBench/radare2/libr/bin/format/mach0/extr_dyldcache.c_r_buf_read_string.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/bin/format/mach0/extr_dyldcache.c_r_buf_read_string.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i32*, i32, i32)* @r_buf_read_string to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @r_buf_read_string(i32* %0, i32 %1, i32 %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i64*, align 8
  store i32* %0, i32** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  %9 = load i32, i32* %7, align 4
  %10 = call i64* @malloc(i32 %9)
  store i64* %10, i64** %8, align 8
  %11 = load i64*, i64** %8, align 8
  %12 = icmp ne i64* %11, null
  br i1 %12, label %13, label %26

13:                                               ; preds = %3
  %14 = load i32*, i32** %5, align 8
  %15 = load i32, i32* %6, align 4
  %16 = load i64*, i64** %8, align 8
  %17 = load i32, i32* %7, align 4
  %18 = call i32 @r_buf_read_at(i32* %14, i32 %15, i64* %16, i32 %17)
  %19 = load i64*, i64** %8, align 8
  %20 = load i32, i32* %7, align 4
  %21 = sub nsw i32 %20, 1
  %22 = sext i32 %21 to i64
  %23 = getelementptr inbounds i64, i64* %19, i64 %22
  store i64 0, i64* %23, align 8
  %24 = load i64*, i64** %8, align 8
  %25 = bitcast i64* %24 to i8*
  store i8* %25, i8** %4, align 8
  br label %27

26:                                               ; preds = %3
  store i8* null, i8** %4, align 8
  br label %27

27:                                               ; preds = %26, %13
  %28 = load i8*, i8** %4, align 8
  ret i8* %28
}

declare dso_local i64* @malloc(i32) #1

declare dso_local i32 @r_buf_read_at(i32*, i32, i64*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
